[gd_scene load_steps=9 format=3 uid="uid://cxbi14y7r7q5f"]

[ext_resource type="Script" path="res://ui/main.gd" id="1_w18yf"]
[ext_resource type="PackedScene" uid="uid://btxboyi6ctpxq" path="res://ui/loading/loading.tscn" id="2_jpl0v"]
[ext_resource type="PackedScene" uid="uid://fm4ff8ar5nm0" path="res://ui/main_menu.tscn" id="3_q04lv"]
[ext_resource type="PackedScene" uid="uid://d2hoj6e4ao536" path="res://ui/menus/mods/mods.tscn" id="4_av7vb"]
[ext_resource type="PackedScene" uid="uid://chotu7f2vsjke" path="res://ui/menus/new_game/new_game.tscn" id="5_cyego"]
[ext_resource type="PackedScene" uid="uid://c5gi1kfmoo02i" path="res://ui/menus/settings/settings.tscn" id="5_r7vc2"]
[ext_resource type="PackedScene" uid="uid://cd7x0p0fsdn7g" path="res://ui/menus/servers/servers.tscn" id="8_lwtn2"]
[ext_resource type="PackedScene" uid="uid://bpse7iuci88lr" path="res://ui/menus/saves/saves.tscn" id="8_ysqt5"]

[node name="Main" type="CanvasLayer"]
layer = 0
script = ExtResource("1_w18yf")

[node name="Loading" parent="." instance=ExtResource("2_jpl0v")]
unique_name_in_owner = true

[node name="MainMenu" parent="." instance=ExtResource("3_q04lv")]
unique_name_in_owner = true
visible = false

[node name="NewGame" type="Button" parent="MainMenu"]
layout_mode = 2
text = "MainMenu_NewGame"

[node name="Saves" type="Button" parent="MainMenu"]
layout_mode = 2
text = "MainMenu_Saves"

[node name="Servers" type="Button" parent="MainMenu"]
layout_mode = 2
text = "MainMenu_Servers
"

[node name="Mods" type="Button" parent="MainMenu"]
layout_mode = 2
text = "MainMenu_Mods"

[node name="Settings" type="Button" parent="MainMenu"]
layout_mode = 2
text = "MainMenu_Settings"

[node name="Windows" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0

[node name="NewGame" parent="Windows" instance=ExtResource("5_cyego")]
visible = false

[node name="Mods" parent="Windows" instance=ExtResource("4_av7vb")]
visible = false

[node name="Settings" parent="Windows" instance=ExtResource("5_r7vc2")]
visible = false

[node name="Saves" parent="Windows" instance=ExtResource("8_ysqt5")]
visible = false

[node name="Servers" parent="Windows" instance=ExtResource("8_lwtn2")]
visible = false

[connection signal="pressed" from="MainMenu/NewGame" to="Windows/NewGame" method="show"]
[connection signal="pressed" from="MainMenu/Saves" to="." method="_on_saves_pressed"]
[connection signal="pressed" from="MainMenu/Servers" to="Windows/Servers" method="show"]
[connection signal="pressed" from="MainMenu/Mods" to="Windows/Mods" method="show"]
[connection signal="pressed" from="MainMenu/Settings" to="Windows/Settings" method="show"]
